# parallel_executor

./: CMakeLists.txt
src/devices/: Device.h  DeviceA.h  DeviceB.h
src/events/: DataEvent.h  DeviceEvent.h  Event.h  StartedEvent.h  WorkDoneEvent.h
src/parallel_executor/: EventQueue.cpp  EventQueue.h  main.cpp
